syntax = "proto2";
import "wechat.proto";

package wechat_proto;
option go_package = "../wechat";

message SpamAndroidBody{
  optional uint32 Loc=1;
  optional uint32 Root=2;
  optional uint32 Debug=3;
  optional string PackageSign=4;
  optional string RadioVersion=5;
  optional string BuildVersion=6;
  optional string DeviceId=7;
  optional string AndroidId=8;
  optional string SerialId=9;
  optional string Model=10;
  optional uint32 CpuCount=11;
  optional string CpuBrand=12;
  optional string CpuExt=13;
  optional string WlanAddress=14;
  optional string Ssid=15;
  optional string Bssid=16;
  optional string SimOperator=17;
  optional string WifiName=18;
  optional string BuildFP=19;
  optional string BuildBoard=20;
  optional string BuildBootLoader=21;
  optional string BuildBrand=22;
  optional string BuildDevice=23;
  optional string BuildHardware=24;
  optional string BuildProduct=25;
  optional string BuildManufacturer=26;
  optional string PhoneNum=27;
  optional string NetType=28;
  optional uint64 Qemu=29;
  optional uint64 Modified=30;
  optional uint64 Task=31;
  optional string PackageName=32;
  optional string AppName=33;
  optional string DataDir=34;
  optional string ClassLoader=35;
  optional uint64 HardwareMask=38;
  optional uint64 Luckpackcount=41;
  optional string BaseAPKMD5=42;
  optional string ClientVersion=43;
  optional string TbVersion=44;
  optional string Ip=45;
  optional string Locale=46;
  optional uint64 CallState=47;
  optional uint64 KeyGuardSecure=48;
  optional uint64 WifiOn=50;
  optional uint64 XposeCall=51;
  optional uint64 AdbEnable=53;
  optional uint64 Monkey=54;
  optional string SplashName=55;
  optional string OsBinderProxy=56;
  optional string StubProxy=57;
  optional uint64 VirtualNet=58;
  optional uint64 Vpn=59;
  optional string SubScriberId=60;
  optional string GsmSimSate=61;
  optional string GsmSimOperator=62;
  optional string GsmSimOperatorNumber=63;
  optional string SoterId=64;
  optional string KernelReleaseNumber=65;
  optional uint64  UsbState=66;
  optional string Sign=67;
  optional uint64 PackageFlag=68;
  optional uint64 AccessFlag=69;
  optional uint64 Unkonwn=70;
  optional uint64 TbVersionCrc=71;
  optional string SfMD5=72;
  optional string SfArmMD5=73;
  optional string SfArm64MD5=74;
  optional string SbMD5=75;
  optional string SoterId2=76;
  optional string WidevineDeviceID=77;
  optional string FSID=78;
  optional string Oaid=79;
  optional uint64 TimeCheck=80;
  optional uint64 NanoTime=81;
  optional uint64 Refreshtime=83;
  optional string SoftConfig=84;
  optional bytes SoftData=85;
  optional uint64 DebugFlags=86;
  optional string RouteIFace=87;
  optional uint64 TvSec=88;
  optional uint64 TvUsec=89;
  optional uint64 TvCheck=90;
  optional bytes PkgHash3Encrypted=91;
  optional uint64 pkgHash3Sum=92;
  optional bytes EntranceClassLoaderNameEncrypted=93;
  optional uint64 EntranceClassLoaderNameSum=94;
  optional bytes ApkLeadingMD5Encrypted=95;
  optional uint64 ApkLeadingMD5Sum=96;
  optional bytes AppInstrumentationClassNameEncrypted=97;
  optional uint64 AppInstrumentationClassNameSum=98;
  optional bytes AmsBinderClassNameEncrypted=99;
  optional uint64 AmsBinderClassNameSum=100;
  optional bytes AmsSingletonClassNameEncrypted=101;
  optional uint64 AmsSingletonClassNameSum=102;
  optional bytes ApkSignatureEncrypted=103;
  optional uint64 ApkSignatureSum=104;
  optional bytes FrameworkMd5Encrypted=105;
  optional uint64 FrameworkMd5Sum=106;
  optional bytes FrameworkArmMd5Encrypted=107;
  optional uint64 FrameworkArmMd5Sum=108;
  optional bytes FrameworkArm64Md5Encrypted=109;
  optional uint64 FrameworkArm64Md5Sum=110;
  optional bytes BinMd5Encrypted=111;
  optional uint64 BinMd5Sum=112;
  optional bytes FsidEncrypted=113;
  optional uint64 FsidSum=114;
  optional uint64 RootFlags=115;
  optional uint64 uid=116;
  optional uint64 DebuggerFlags=117;
  optional bytes ApkPathEncrypted=118;
  optional uint64 apkPathEncrypted=119;
  optional bytes RealApkPathEncrypted=120;
  optional uint64 realApkPathSum=121;
  optional bytes illegalLibraryEncrypted=122;
  optional uint64 illegalLibrarySum=123;
  optional bytes stackTraceEncrypted=124;
  optional uint64 stackTraceSum=125;
  optional ExtraSystemInfo extraSystemInfo=126;
  optional uint64 binderFlags=127;
}

message ExtraSystemInfo{
  optional bytes serviceNamesMd5Encrypted=1;
  optional uint64 serviceNamesMd5Sum=2;
  optional bytes systemAppMd5Encrypted=3;
  optional uint64 systemAppMd5Sum=4;
  optional bytes systemPrivateAppMd5Encrypted=5;
  optional uint64 systemPrivateAppMd5Sum=6;
  optional bytes vendorAppMd5Encrypted=7;
  optional uint64 vendorAppMd5Sum=8;
  optional bytes productAppMd5Encrypted=9;
  optional uint64 productAppMd5Sum=10;
  optional bytes lsMd5Encrypted=11;
  optional uint64 lsMd5Sum=12;
  optional bytes frameworkResMd5Encrypted=13;
  optional uint64 frameworkResMd5Sum=14;
  optional bytes libCppMd5Encrypted=15;
  optional uint64 libCppMd5Sum=16;
  optional bytes linkerMd5Encrypted=17;
  optional uint64 linkerMd5Sum=18;
  optional bytes rootDirLastAccessTimeEncrypted=19;
  optional uint64 rootDirLastAccessTimeSum=20;
  optional bytes systemDirLastAccessTimeEncrypted=21;
  optional uint64 systemDirLastAccessTimeSum=22;
  optional bytes dataDirLastAccessTimeEncrypted=23;
  optional uint64 dataDirLastAccessTimeSum=24;
  optional bytes buildFPEncrypted=25;
  optional uint64 buildFPSum=26;
  optional bytes kernelEncrypted=27;
  optional uint64 kernelSum=28;
}